--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -15,6 +15,38 @@
         </h1>
         <a class="back-link" href="./index.html">Go back</a>
       </div>
+      <form class="form">
+        <label class="form-label">
+          Delay (ms)
+          <input class="delay-input" type="number" name="delay" required />
+        </label>
+
+        <fieldset class="radio-btn">
+          <legend class="state-legend">State</legend>
+          <label>
+            <input
+              class="fulfilled-input"
+              type="radio"
+              name="state"
+              value="fulfilled"
+              required
+            />
+            Fulfilled
+          </label>
+          <label>
+            <input
+              class="rejected-input"
+              type="radio"
+              name="state"
+              value="rejected"
+              required
+            />
+            Rejected
+          </label>
+        </fieldset>
+
+        <button class="btn" type="submit">Create notification</button>
+      </form>
     </main>
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
